Added inital NavBar Componenet

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, sans-serif;
+  overflow-x: hidden;
 }
 
 .App {
