--- a/client/src/components/header/Header.module.scss
+++ b/client/src/components/header/Header.module.scss
@@ -23,10 +23,6 @@
       background-color: $gray;
     }
 
-    svg {
-      color: gray;
-    }
-
     @media only screen and (max-width: 640px) {
       display: none;
     }
@@ -36,11 +32,14 @@
     display: flex;
     width: 200px;
     justify-content: space-around;
-
     svg {
       width: 28px;
       height: 28px;
       fill: black;
     }
+  }
+
+  span {
+    background-color: white;
   }
 }
