--- a/client/src/pages/home/Home.module.scss
+++ b/client/src/pages/home/Home.module.scss
@@ -3,8 +3,9 @@
 
 .container {
   width: 100vw;
-  padding: 5px;
+  padding: 1rem 3rem;
   min-height: calc(92vh - 5px);
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
