--- a/client/src/components/navBar/NavBar.module.scss
+++ b/client/src/components/navBar/NavBar.module.scss
@@ -6,6 +6,7 @@
   height: 8vh;
 
   display: flex;
+
   flex-wrap: nowrap;
   overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
@@ -14,5 +15,15 @@
 
   .btn {
     scroll-snap-align: start;
+  }
+  @media only screen and (min-width: 640px) {
+    justify-content: center;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 }
