--- a/client/src/components/card/Card.module.scss
+++ b/client/src/components/card/Card.module.scss
@@ -3,7 +3,8 @@
   height: 100%;
   display: flex;
 
-  img {
+  img,
+  video {
     object-fit: cover;
     object-position: center;
     width: 100%;
