--- a/client/src/components/card/Card.module.scss
+++ b/client/src/components/card/Card.module.scss
@@ -1,13 +1,19 @@
 .container {
-  width: 100%;
-  height: 100%;
-  display: flex;
+  height: 350px;
+  width: 350px;
+  position: relative;
+  overflow: hidden;
 
   img,
   video {
-    object-fit: cover;
-    object-position: center;
     width: 100%;
-    border-radius: 3px;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
   }
 }
