--- a/client/src/components/gallery/Gallery.module.scss
+++ b/client/src/components/gallery/Gallery.module.scss
@@ -1,7 +1,7 @@
 .container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
-  grid-gap: 2rem;
-  grid-template-rows: 400px;
+  display: flex;
+  flex-wrap: wrap;
   padding-top: 1rem;
+  justify-content: center;
+  gap: 1rem;
 }
