Added scroll bar to navBar Componenet

--- a/client/src/components/card/Card.module.scss
+++ b/client/src/components/card/Card.module.scss
@@ -11,6 +11,7 @@
     display: block;
     object-fit: cover;
     position: absolute;
+    border-radius: 3px;
     top: 0;
     left: 0;
     bottom: 0;
