Added try catch to api and changed default endpoint for Home

--- a/client/src/pages/home/Home.module.scss
+++ b/client/src/pages/home/Home.module.scss
@@ -8,4 +8,11 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+
+  .spin {
+    color: $font_gray;
+    i {
+      background-color: $font_gray;
+    }
+  }
 }
