--- a/client/src/components/card/Card.module.scss
+++ b/client/src/components/card/Card.module.scss
@@ -1,8 +1,8 @@
 .container {
   overflow: hidden;
-  cursor: pointer;
   img,
-  video {
+  video,
+  .skeleton {
     width: 100%;
     height: 100%;
     display: block;
