--- a/client/src/components/header/Header.module.scss
+++ b/client/src/components/header/Header.module.scss
@@ -4,6 +4,7 @@
   font-family: Billabong;
   src: url(../../assets/fonts/Billabong.ttf);
 }
+
 .container {
   @extend %container-shared;
   width: 100%;
@@ -11,10 +12,7 @@
   justify-content: space-around;
   height: 52px;
   align-items: center;
-  * {
-    overflow: hidden;
-  }
-
+  overflow: hidden;
   .search {
     @extend %container-shared;
     padding: 5px;
@@ -23,6 +21,7 @@
     height: 28px;
     width: 215px;
     background-color: $gray;
+    overflow: hidden;
     input {
       height: 100%;
       width: 100%;
@@ -49,10 +48,12 @@
   span {
     background-color: white;
   }
-
-  h1 {
-    font-family: Billabong;
-    font-size: 2.5rem;
-    margin-top: auto;
+  .logo {
+    h1 {
+      font-family: Billabong;
+      font-size: 2.5rem;
+      margin-top: auto;
+      margin-bottom: 0;
+    }
   }
 }
