Add search input for mobile

--- a/client/src/components/header/Header.module.scss
+++ b/client/src/components/header/Header.module.scss
@@ -28,10 +28,6 @@
       border: none;
       background-color: $gray;
     }
-
-    @media only screen and (max-width: 640px) {
-      display: none;
-    }
   }
 
   .icons {
@@ -43,8 +39,10 @@
       height: 28px;
       fill: black;
     }
+
     @media only screen and (max-width: 640px) {
       justify-content: flex-end;
+      width: 50px;
       gap: 1rem;
     }
   }
